<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/benjing"
    tools:context="com.example.main.shop.Activity.User.LoginActivity">
    <TextView
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="100dp"
        android:textSize="40sp"
        android:layout_width="200dp"
        android:layout_height="70dp"/>
    //android:layout_centerInParent="true"把控件放在父控件的正中位置
<LinearLayout
  android:layout_centerInParent="true"
    android:id="@+id/ll"
    android:layout_marginTop="200dp"
    android:background="@color/white"
    android:layout_width="350dp"
    android:layout_height="110dp"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_marginLeft="30dp"
            android:src="@drawable/name"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:id="@+id/imageView"/>
        <EditText
            android:cursorVisible="false"
            android:background="@null"
            android:layout_marginLeft="50dp"
            android:hint="@string/phoneNumber"
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp">
        <TextView
            android:layout_centerInParent="true"
            android:background="#cfcfcf"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_marginLeft="30dp"
            android:src="@drawable/mima"
            android:layout_width="30dp"
            android:layout_height="match_parent"/>
        <EditText
            android:background="@null"
            android:layout_marginLeft="50dp"
            android:inputType="numberPassword"
            android:hint="@string/password"
            android:id="@+id/et_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_below="@+id/ll"
        android:layout_marginTop="54dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/iv_login"
            android:layout_gravity="center"
            android:src="@drawable/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/tv_register"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_forgetPsw"
            android:paddingRight="@dimen/dp_10"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:text="@string/forgetPassword"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </RelativeLayout>
</RelativeLayout>
